@startuml

title 12.4. Advanced inventory operations completion

hide circle
skinparam linetype ortho

enum InventoryDocumentType {
	purchase_receipt
	sale_shipment
	customer_return
	supplier_return
	production
	write_off
	stock_adjustment
	transfer
	reversal
}

entity InventoryDocument
entity InventoryDocumentLine
entity InventoryReason
entity Warehouse
entity WarehouseStock
entity OrderEntry
entity PurchaseEntry

class InventoryTransferUseCase <<use case>>
class CustomerReturnUseCase <<use case>>
class SupplierReturnUseCase <<use case>>
class WriteOffAdjustmentUseCase <<use case>>

InventoryTransferUseCase --> InventoryDocument : transfer
CustomerReturnUseCase --> InventoryDocument : customer_return
SupplierReturnUseCase --> InventoryDocument : supplier_return
WriteOffAdjustmentUseCase --> InventoryDocument : write_off / stock_adjustment
InventoryDocument --> InventoryDocumentLine : lines
InventoryDocumentLine --> Warehouse
InventoryDocumentLine --> WarehouseStock
InventoryDocument --> InventoryReason : explains
InventoryDocumentLine --> OrderEntry : sales source
InventoryDocumentLine --> PurchaseEntry : purchase source

note right of InventoryTransferUseCase
  Implemented:
  - App\Service\Inventory\InventoryTransferUseCase creates draft/postable
    transfer documents with one OUT line and one IN line.
  - One transfer document contains paired OUT/IN lines.
  - Source warehouse decreases stock, destination increases stock.
  - The same product and quantity must be balanced across the pair.
  - Cost snapshot should move with the stock.
  - InventoryPostingService validates the pair before posting.
end note

note right of CustomerReturnUseCase
  Implemented:
  - App\Service\Inventory\CustomerReturnUseCase creates customer returns.
  - Customer return links to OrderEntry.
  - Returned quantity must not exceed shipped quantity.
  - Posting creates IN movement and updates order progress/status.
  - Refund/payment handling remains in Payment stage.
  - InventoryPostingService enforces source order-entry bounds.
end note

note right of SupplierReturnUseCase
  Implemented:
  - App\Service\Inventory\SupplierReturnUseCase creates supplier returns.
  - Supplier return links to PurchaseEntry.
  - Returned quantity must not exceed received quantity.
  - Posting creates OUT movement and updates purchase progress/status.
  - InventoryPostingService enforces source purchase-entry bounds.
end note

note right of WriteOffAdjustmentUseCase
  Implemented:
  - App\Service\Inventory\WriteOffAdjustmentUseCase creates write-off and
    stock-adjustment drafts.
  - Write-off and stock adjustment require InventoryReason.
  - Direction and cost rules must be explicit.
  - Audit fields and StatusHistory should show post/cancel events.
  - InventoryPostingService validates active/store-compatible reasons and
    explicit unit cost for stock-adjustment IN lines.
end note

note bottom
  Verification target:
  - tests/Service/InventoryPostingServiceTest.php
  - tests/Service/Inventory/AdvancedInventoryUseCaseTest.php
  - lint:container
  - lint:twig templates
  - doctrine:schema:validate --skip-sync
end note

@enduml
